V3923: Revisione  Sinottici al 27/05/2025

--- a/Prevu.Synoptics.V3923_Evanses/Details/D286.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Details/D286.xaml
@@ -29,14 +29,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="181" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="286-21-CV1" Canvas.Left="181" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="40" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="201" Canvas.Top="120" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="40" RenderTransformOrigin="0.5,0.5" StatusComponent="286-21-CV2" Canvas.Left="201" Canvas.Top="120" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
