--- a/Prevu.Synoptics.V3923_Evanses/Pages/P020.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P020.xaml
@@ -43,7 +43,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="79" Canvas.Top="609" StatusComponent="026-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="380" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="79" Canvas.Top="609" StatusComponent="024-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="380" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -79,7 +79,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" StatusComponent="020-21-CV1" PipeHeight="Medium" Canvas.Left="337" Canvas.Top="327" Direction="DirectionOne"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" StatusComponent="020-21-CV1" PipeHeight="Medium" Canvas.Left="337" Canvas.Top="327"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="168" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="194" Canvas.Top="230">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
