--- a/Prevu.Synoptics.V3923_Evanses/Pages/P088.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P088.xaml
@@ -83,14 +83,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="42" StatusComponent="377-01-MA1" Color="Water" Canvas.Left="1183" Canvas.Top="239" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="42" StatusComponent="377-01-MA1" Color="Water" Canvas.Left="1183" Canvas.Top="239" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="377-23-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="52" StatusComponent="083-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1036" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="52" StatusComponent="083-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1035" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -123,7 +123,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="71" Color="Water" StatusComponent="091-01-MA1" Canvas.Left="819" Canvas.Top="721" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="45" Color="Water" StatusComponent="092-21-CV1" Canvas.Left="1115" Canvas.Top="757" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="45" Color="Water" StatusComponent="092-22-CV1" Canvas.Left="1115" Canvas.Top="757" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="45" Color="Water" StatusComponent="091-21-CV1" Canvas.Left="1074" Canvas.Top="632" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_PSP_Pit_wAgitator Width="209" Canvas.Top="249" Canvas.Left="39" Height="162" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="101-41-LT1" TrendName="LEVEL"/>
         <Machines:V01_PSP_Pit_wAgitator Width="210" Canvas.Top="324" Canvas.Left="462" Height="162" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="105-41-LT1" TrendName="LEVEL"/>
@@ -167,7 +167,7 @@
         <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="38" Width="48" Canvas.Left="1155" Canvas.Top="616" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="38" Width="48" Canvas.Left="1031" Canvas.Top="741" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="38" Width="48" Canvas.Left="1155" Canvas.Top="741" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="1040" Canvas.Top="276" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1039" Canvas.Top="276" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="1040" Canvas.Top="188" RenderTransformOrigin="0.5,0.5" Width="182" Height="174" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:V01_SCW_Screw_wHopper.RenderTransform>
                 <TransformGroup>
