--- a/Prevu.Synoptics.V3923_Evanses/Pages/P170.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P170.xaml
@@ -9,6 +9,13 @@
              x:Class="Prevu.Synoptics.P170" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
+        <Labels:Pipe Width="23" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="460" Canvas.Top="466" VisibilityComponent="195-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Labels:Pipe Width="83" StatusComponent="176-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1097" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="85" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="291" Canvas.Top="544" VisibilityComponent="" VisibilitySignal="" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="98" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="325" Canvas.Top="591" VisibilityComponent="" VisibilitySignal="" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
@@ -44,14 +51,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="44" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1249" Canvas.Top="458" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct">
+        <Labels:Pipe Width="44" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1249" Canvas.Top="458" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="45" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1201" Canvas.Top="457" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="195-21-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="25" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1211" Canvas.Top="446" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="195-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -81,7 +88,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="771" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="455" Canvas.Top="468" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="195-21-CV1" VisibilitySignal="LS2" Icon="Left"/>
+        <Labels:Pipe Width="757" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="469" Canvas.Top="447" HorizontalAlignment="Center" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS2" Icon="Left"/>
         <Labels:Pipe Width="176" StatusComponent="161-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="342" Canvas.Top="392" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -97,31 +104,31 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="65" StatusComponent="162-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="449" Canvas.Top="395" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="50" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1269" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Width="238" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1198" Canvas.Top="361" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="50" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1269" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1"/>
+        <Labels:Pipe Width="238" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1198" Canvas.Top="361" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="196" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1219" Canvas.Top="125" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="196" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1219" Canvas.Top="125" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="132" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="339" Canvas.Top="91" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="130" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="340" Canvas.Top="91" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="913" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="406" Canvas.Top="28" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1"/>
+        <Labels:Pipe Width="916" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="403" Canvas.Top="28" HorizontalAlignment="Center" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1"/>
         <Labels:Pipe Width="127" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="226" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="83" StatusComponent="163-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="234" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="92" StatusComponent="163-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="234" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="167" StatusComponent="164-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="9" Canvas.Top="559" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -148,7 +155,7 @@
         <Machines:Manual_selection Height="86" Width="46" Canvas.Left="711" Canvas.Top="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="388" Canvas.Top="152" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="496" Canvas.Top="388" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="299" Canvas.Top="470" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="320" Canvas.Top="470" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="81" Canvas.Top="470" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="81" Canvas.Top="638" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="207" RenderTransformOrigin="0.5,0.5" Canvas.Left="333" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -170,7 +177,7 @@
             </Machines:External.RenderTransform>
         </Machines:External>
         <Labels:JumpLabel JumpFromLabel="173-01-MA1" JumpToLabel="180-01-MA1" Canvas.Left="246" Canvas.Top="511" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="165-01-MA1" JumpToLabel="150-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="207" Canvas.Top="127"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="168-01-MA1" JumpToLabel="150-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="207" Canvas.Top="127"/>
         <Labels:JumpLabel JumpFromLabel="208-01-MA1" JumpToLabel="229-01-MA1" Canvas.Left="1337" Canvas.Top="199" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="170-SORT" DetailsPageName="D170" Canvas.Left="777" Canvas.Top="58" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="195-SORT" DetailsPageName="D195" Canvas.Left="1091" Canvas.Top="326" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -179,7 +186,7 @@
         <Labels:DeviceLabel ComponentName="168-01-MA1" Canvas.Left="475" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="208-01-MA1" Height="50" Width="90" Canvas.Left="1125" Canvas.Top="161" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="162-01-MA1" Canvas.Left="477" Canvas.Top="332" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="163-01-MA1" Canvas.Left="279" Canvas.Top="414" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="163-01-MA1" Canvas.Left="300" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="164-01-MA1" Canvas.Left="61" Canvas.Top="414" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="165-01-MA1" Canvas.Left="163" Canvas.Top="582" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="173-01-MA1" Canvas.Left="458" Canvas.Top="582" HorizontalAlignment="Left" VerticalAlignment="Center"/>
