--- a/Prevu.Synoptics.V3923_Evanses/Pages/P350.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P350.xaml
@@ -42,7 +42,7 @@
         <Labels:Pipe Width="349" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="811" Canvas.Top="40" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="172" Color="Water" StatusComponent="519-01-MA1" Canvas.Left="988" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="58" StatusComponent="380-01-MA1" PipeHeight="Medium" Canvas.Left="1318" Canvas.Top="350" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="46" StatusComponent="387-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="856" Canvas.Top="383" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="46" StatusComponent="387-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="855" Canvas.Top="383" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -237,7 +237,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="858" Canvas.Top="387" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="857" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1360" Canvas.Top="326" Height="58" Width="58" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="862" Canvas.Top="315" RenderTransformOrigin="0.5,0.5" Width="160" Height="157" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:V01_SCW_Screw_wHopper.RenderTransform>
