--- a/Prevu.Synoptics.V3923_Evanses/Pages/P880.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P880.xaml
@@ -89,7 +89,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="217" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS6" Canvas.Left="366" Canvas.Top="455" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="160" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ECS7" Canvas.Left="765" Canvas.Top="445" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="488" RenderTransformOrigin="0.5,0.5" StatusComponent="897-01-MA1" Color="Air" Canvas.Left="892" Canvas.Top="618" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="488" RenderTransformOrigin="0.5,0.5" StatusComponent="897-01-MA1" Color="ByProduct" Canvas.Left="892" Canvas.Top="618" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="897-01-MA1" Canvas.Left="790" Canvas.Top="618" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="895-01-MA1" Canvas.Left="832" Canvas.Top="583" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
@@ -130,7 +130,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="766" StatusComponent="897-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="614" Canvas.Top="96" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="495" Canvas.Top="782" HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="432" Canvas.Top="593" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Height="50" Width="50">
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="432" Canvas.Top="594" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="50" Width="50">
             <Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
