--- a/Prevu.Synoptics.V3923_Evanses/Pages/P940.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P940.xaml
@@ -11,8 +11,8 @@
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
         <Labels:Pipe Width="123" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="948" Canvas.Top="509" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="379" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="Air" Canvas.Left="1121" Canvas.Top="738" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Canvas.Left="1019" Canvas.Top="738" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="379" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="ByProduct" Canvas.Left="1121" Canvas.Top="738" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Canvas.Left="1019" Canvas.Top="738" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="46" RenderTransformOrigin="0.5,0.5" StatusComponent="955-01-MA1" Canvas.Left="1069" Canvas.Top="695" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -58,7 +58,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
 
-        <Labels:Pipe Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="874-01-MA1" PipeHeight="Medium" Canvas.Left="408" Canvas.Top="723" HorizontalAlignment="Left" VerticalAlignment="Center" >
+        <Labels:Pipe Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="964-01-MA1" PipeHeight="Medium" Canvas.Left="408" Canvas.Top="723" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -172,7 +172,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="709" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="Air" Canvas.Left="791" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="709" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="ByProduct" Canvas.Left="791" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="12" StatusComponent="940-01-ECS2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="746" Canvas.Top="475" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
