--- a/Prevu.Synoptics.V3923_Evanses/Details/D195.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Details/D195.xaml
@@ -10,14 +10,14 @@
              mc:Ignorable="d"  
             d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="250" Width="445">
-        <Labels:Pipe Width="60" StatusComponent="191-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="29" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="56" StatusComponent="191-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="31" Canvas.Top="92" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="46" StatusComponent="195-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="339" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Width="46" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="339" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
