--- a/Prevu.Synoptics.V3923_Evanses/Pages/P460.xaml
+++ b/Prevu.Synoptics.V3923_Evanses/Pages/P460.xaml
@@ -8,14 +8,14 @@
              x:Class="Prevu.Synoptics.P460" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="46" StatusComponent="517-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1318" Canvas.Top="521" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="46" StatusComponent="517-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1369" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="144" Color="Water" StatusComponent="516-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="1163" Canvas.Top="456" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="144" Color="Water" StatusComponent="516-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="1212" Canvas.Top="456" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -23,24 +23,22 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="473-01-MA1" Canvas.Left="111" Canvas.Top="155" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="60" Color="Water" StatusComponent="518-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1365" Canvas.Top="613" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="60" Color="Water" StatusComponent="518-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1340" Canvas.Top="668" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="142" Color="Water" StatusComponent="519-01-MA1" Canvas.Left="1247" Canvas.Top="691" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="266" Color="Water" StatusComponent="519-01-MA1" Canvas.Left="1098" Canvas.Top="746" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="247" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="" Canvas.Left="926" Canvas.Top="464" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="78" Color="Water" StatusComponent="519-01-MA1" Canvas.Left="1169" Canvas.Top="679" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="218" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="1062" Canvas.Top="572" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="284" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="1029" Canvas.Top="605" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="78" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="" Canvas.Left="1169" Canvas.Top="704" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="320" Color="Water" StatusComponent="519-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="768" Canvas.Top="306" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -80,15 +78,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="146" Color="Water" StatusComponent="516-01-MA1" Canvas.Left="1091" Canvas.Top="386" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="155" Color="Water" StatusComponent="516-01-MA1" Canvas.Left="1131" Canvas.Top="386" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="282" StatusComponent="466-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="759" Canvas.Top="181" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="82" Color="Water" StatusComponent="519-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="1130" Canvas.Top="743" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -239,22 +230,21 @@
         <Machines:V01_WCE_Centrifuge Canvas.Left="543" Canvas.Top="94" Height="152" Width="178" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="541" Canvas.Top="488" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VRC_WaterTank Canvas.Left="320" Canvas.Top="679" Height="133" Width="244" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="470-41-LT1" TrendName="LEVEL"/>
-        <Machines:CV_Valve_001 Color="Water" RenderTransformOrigin="0.5,0.5" Height="50" Width="50" Canvas.Left="1370" Canvas.Top="545" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Machines:CV_Valve_001 Color="Water" RenderTransformOrigin="0.5,0.5" Height="50" Width="50" Canvas.Left="1345" Canvas.Top="600" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="270"/>
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:WaterPump Height="45" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1285" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:WaterPump Height="45" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1260" Canvas.Top="726" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Rectangle Height="46" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="1243" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VRC_WaterTank Canvas.Left="1375" Canvas.Top="619" Width="126" Height="126" ComponentName="518-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VRC_WaterTank Canvas.Left="1350" Canvas.Top="674" Width="126" Height="126" ComponentName="518-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="36" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="1153" Canvas.Top="72" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -266,8 +256,8 @@
         <Machines:V01_WCE_Centrifuge Canvas.Left="1044" Canvas.Top="59" Height="186" Width="215" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="64" Width="79" Fill="Gray" RadiusX="15" RadiusY="15" Canvas.Left="1064" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="44" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1081" Canvas.Top="366" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="1320" Canvas.Top="525" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_SCW_Screw_wHopper Canvas.Left="1199" Canvas.Top="449" RenderTransformOrigin="0.5,0.5" Width="160" Height="157" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1370" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_SCW_Screw_wHopper Canvas.Left="1248" Canvas.Top="428" RenderTransformOrigin="0.5,0.5" Width="160" Height="157" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1078" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
@@ -277,8 +267,8 @@
         </Machines:CV_Valve>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="460-01-MA1" JumpToLabel="456-01-MA1" Canvas.Top="79" Canvas.Left="20"/>
         <Labels:JumpLabel JumpFromLabel="477-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="994" Canvas.Top="551" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="514-01-MA1" JumpToLabel="527-61-LEV" Canvas.Left="1446" Canvas.Top="242" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="519-01-MA1" JumpToLabel="380-RINSE" Canvas.Left="1133" Canvas.Top="763" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="510-01-MA1" JumpToLabel="527-61-LEV" Canvas.Left="1446" Canvas.Top="242" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="519-01-MA1" JumpToLabel="380-RINSE" Canvas.Left="1017" Canvas.Top="713" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="474-HEAT" DetailsPageName="D474" Canvas.Left="27" Canvas.Top="489"/>
         <Labels:DetailsLabel ComponentName="510-VALVE" DetailsPageName="D510" Canvas.Left="1214" Canvas.Top="24" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="510-RINSE" DetailsPageName="D510_2" Canvas.Left="968" Canvas.Top="124" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -297,9 +287,9 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="470-42-TT1" Canvas.Left="452" Canvas.Top="713"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="470-41-LT1" Canvas.Left="342" Canvas.Top="713"/>
         <Labels:DeviceLabel ComponentName="463-01-MA1" Canvas.Left="721" Canvas.Top="104" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="519-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1263" Canvas.Top="723" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="518-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1393" Canvas.Top="655" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="518-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1418" Canvas.Top="547" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="519-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1238" Canvas.Top="778" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="518-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1368" Canvas.Top="710" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="518-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1393" Canvas.Top="602" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="516-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="960" Canvas.Top="365" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="510-01-MA1" Canvas.Left="1269" Canvas.Top="94" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="514-01-MA1" Canvas.Left="1306" Canvas.Top="304" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -307,6 +297,6 @@
         <Labels:DeviceLabel ComponentName="510-01-YA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1269" Canvas.Top="160" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="510-02-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1375" Canvas.Top="160" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="510-22-CV1"  Canvas.Left="987" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="517-01-MA1" Canvas.Left="1299" Canvas.Top="396" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="517-01-MA1" Canvas.Left="1348" Canvas.Top="375" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
